# AeroSieve

./: .gitignore  Cargo.toml  README.md
baselines/: python_naive.py
benches/: pipeline_benchmark.rs
crates/aerosieve/: Cargo.toml  README.md
crates/aerosieve-acoustic/: Cargo.toml  README.md
crates/aerosieve-acoustic/benches/: acoustic_benchmark.rs
crates/aerosieve-acoustic/src/: lib.rs
crates/aerosieve-lexical/: Cargo.toml  README.md
crates/aerosieve-lexical/benches/: lexical_benchmark.rs
crates/aerosieve-lexical/rules/: default.yaml
crates/aerosieve-lexical/src/: lib.rs
crates/aerosieve-ring/: Cargo.toml  README.md
crates/aerosieve-ring/benches/: ring_benchmark.rs
crates/aerosieve-ring/src/: lib.rs
crates/aerosieve-sink/: Cargo.toml  README.md
crates/aerosieve-sink/src/: lib.rs
crates/aerosieve/examples/: basic.rs
crates/aerosieve/src/: lib.rs
