[package]
name = "aerosieve-lexical"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aho-corasick = "1.1"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexical_benchmark"
harness = false
